# lux-math

./: CMakeLists.txt
include/lux/math/: aligned_vector.hpp  header.hpp  header_cl_gcc.ipp  header_msvc.ipp  sse_check.hpp
include/lux/math/geometry/: point.hpp
include/lux/math/optimization/: gradient_descent.hpp
test/optimization/: CMakeLists.txt  gradient_descent.cpp
